--- a/angular.json
+++ b/angular.json
@@ -66,6 +66,11 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "browserTarget": "proxy-for-angular:build",
+            "proxyConfig": "proxy.conf.json",
+            "port": 4200
+         },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
